# IMU-Initialization

./: .gitignore  CMakeLists.txt
include/: eigen_defs.h  imu_ceres.h  imu_preintegration.h  methods.h  simulation.h  so3.h
src/: imu_preintegration.cc  so3.cc  test01.cc
